--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,10 +85,21 @@ jobs:
     - name: install
       run: |
         mkdir dist
-        cd wine
+        pushd wine
         make install
+        popd
+        tar cvfJ wine.tar.xz Dist/*
     - name: Upload artifact ${{ matrix.version }}
       uses: actions/upload-artifact@v1.0.0
       with:
         name: ${{ matrix.version }}
         path: dist
+    - name: Create a new GitHub release if a new tag is pushed
+      uses: svenstaro/upload-release-action@v1-release
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: wine.tar.xz
+        asset_name: wine-${{ matrix.version }}.tar.xz
+        tag: ${{ github.ref }}
+        overwrite: true
