--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ jobs:
     strategy:
       matrix:
         version: [5.1, 5.2]
+        arch: [win64, win32]
 
     runs-on: ubuntu-latest
 
@@ -76,7 +77,7 @@ jobs:
           --without-xslt \
           --disable-tests \
           --disable-vcruntime140_1 \
-          --enable-win64 \
+          --enable-${{ matrix.arch }} \
           --prefix=$(pwd)/../dist
     - name: build
       run: |
@@ -89,10 +90,10 @@ jobs:
         make install
         popd
         tar cvfJ wine.tar.xz dist/*
-    - name: Upload artifact ${{ matrix.version }}
+    - name: Upload artifact ${{ matrix.version }}-${{ matrix.arch }}
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: ${{ matrix.version }}
+        name: ${{ matrix.version }}-${{ matrix.arch }}
         path: dist
     - name: Create a new GitHub release if a new tag is pushed
       uses: svenstaro/upload-release-action@v1-release
@@ -100,6 +101,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: wine.tar.xz
-        asset_name: wine-${{ matrix.version }}.tar.xz
+        asset_name: wine-${{ matrix.version }}-${{ matrix.arch }}.tar.xz
         tag: ${{ github.ref }}
         overwrite: true
