--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         version: [5.1, 5.2, 5.3, 5.4, 5.5, master]
         staging: [-staging, ""]
