--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         root=$PWD
         cd wine-staging/patches
-        ./patchinstall.sh DESTDIR=$root/wine --all
+        ./patchinstall.sh DESTDIR=$root/wine --all -W user32-rawinput-mouse
     - name: configure
       run: |
         cd wine
