--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: ${{ matrix.version }}${{ matrix.staging }}
-        path: dist
+        path: wine/dist
     - name: Create a new GitHub release if a new tag is pushed
       uses: svenstaro/upload-release-action@v1-release
       if: startsWith(github.ref, 'refs/tags/')
