--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,11 +38,12 @@ jobs:
         root=$PWD
         cd wine-staging/patches
         ./patchinstall.sh DESTDIR=$root/wine --all -W user32-rawinput-hid -W user32-rawinput-mouse -W user32-rawinput-mouse-experimental -W user32-rawinput-nolegacy
-    - name: configure
+    - name: configure & build
       run: |
         cd wine
         cp ../*.sh .
         ./clean_build.sh
+        rm -rf dist/include
     - name: packaging
       run: |
         cd wine/dist
