--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: install build
       run: apk add linux-headers musl-dev libc-dev gcc git flex bison autoconf automake make bash tar xz libunwind-dev
-    - name: clone wine
-      run: git clone https://github.com/wine-mirror/wine --depth 1
     - name: apply patch
       run: |
         cd wine
@@ -28,10 +26,9 @@ jobs:
         rm -rf dist/include
     - name: Build EasyPak
       run: |
-        cd wine
         wget https://github.com/codehz/EasyPak/releases/download/v0.5.0/ezbin
         chmod +x ezbin
-        ./ezbin dist/wine64 launcher.txt
+        ./ezbin wine/dist/wine64 launcher.txt
         ./ezbin wine64 package.txt
     - name: Upload artifact
       uses: actions/upload-artifact@v2
