--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: configure git
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Actions"
     - name: configure & build
       run: |
         ./clean_build.sh
