fix execution path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
     - name: test packaging
       run: |
         strace dist/bin/wine64 --version
-        strace wine64 --version
+        strace ./wine64 --version
     - name: Upload artifact (ezpak)
       uses: actions/upload-artifact@v2
       with:
