--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,11 @@ jobs:
     container: archlinux:base-devel
 
     steps:
+    - name: Temporarily fix for glibc
+      run: |
+        patched_glibc=glibc-linux4-2.33-4-x86_64.pkg.tar.zst && \
+        curl -LO "https://repo.archlinuxcn.org/x86_64/$patched_glibc" && \
+        bsdtar -C / -xvf "$patched_glibc"
     - name: Install dependencies
       run: pacman -Syu git wget strace --noconfirm
     - uses: actions/checkout@v2
